src/objects/ADvendio__AdServer_Advertiser_ID__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Accounttype__c</fullName>
        <description>Choose an account type for which this ad server ID is to be used.</description>
        <inlineHelpText>Choose an account type for which this ad server ID is to be used.</inlineHelpText>
        <label>Accounttype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Publisher</fullName>
                </value>
                <value>
                    <fullName>Direct Customer</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the ad server login that is the source of the ID.</description>
        <inlineHelpText>Enter the ad server login that is the source of the ID.</inlineHelpText>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>AdServer Advertiser IDs</relationshipLabel>
        <relationshipName>AdServer_Advertiser_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Type__c</fullName>
        <description>Not in use</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Noch anzupassen!</inlineHelpText>
        <label>AdServer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <description>This field displays the connection to the advertiser.</description>
        <inlineHelpText>This field displays the connection to the advertiser.</inlineHelpText>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdServer Advertiser IDs</relationshipLabel>
        <relationshipName>AdServer_Advertiser_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the connection to the agency.</description>
        <inlineHelpText>This field displays the connection to the agency.</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdServer Advertiser IDs (Agency)</relationshipLabel>
        <relationshipName>AdServer_Advertiser_IDs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AdServer Advertiser ID</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Advertiser__c</columns>
        <columns>ADvendio__Agency__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>thun</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Advertiser__c</columns>
        <columns>ADvendio__Agency__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Advertiser__c</field>
            <operation>startsWith</operation>
            <value>ht</value>
        </filters>
        <label>thun</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>AdServer Advertiser ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdServer Advertiser IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>